# mgit

./: Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
src/: main.rs
