[package]
name = "mgit"
version = "0.1.2"
authors = ["Jan van den Berg <rust@koozz.nl>"]
license = "MIT"
description = "Run git on multiple projects."
keywords = ["cli", "git", "parallel"]
categories = ["command-line-interface", "command-line-utilities"]
homepage = "https://github.com/koozz/mgit"
repository = "https://github.com/koozz/mgit"
documentation = "https://docs.rs/crate/mgit"
readme = "README.md"
edition = "2018"

[dependencies]
num_cpus = "1.12.0"
termcolor = "1.1.0"
threadpool = "1.7.1"
walkdir = "2"
