[package]
name = "mgit"
version = "0.1.9"
authors = ["Jan van den Berg <rust@koozz.nl>"]
license = "MIT"
description = "Run git on multiple projects."
keywords = ["cli", "git", "parallel"]
categories = ["command-line-interface", "command-line-utilities"]
homepage = "https://github.com/koozz/mgit"
repository = "https://github.com/koozz/mgit"
documentation = "https://docs.rs/crate/mgit"
readme = "README.md"
edition = "2018"

[dependencies]
num_cpus = "1.13.0"
termcolor = "1.1.0"
threadpool = "1.8.0"
walkdir = "2.3.1"
